use tonic::{Request, Response, Status, Streaming};
use crate::grpc::internal::{
    node_orchestration_server::{NodeOrchestration, NodeOrchestrationServer},
    *,
};

pub struct OrchestrationService;

#[tonic::async_trait]
impl NodeOrchestration for OrchestrationService {
    async fn register_node(
        &self,
        request: Request<NodeRegistrationRequest>,
    ) -> Result<Response<NodeRegistrationResponse>, Status> {
        let req = request.into_inner();
        // TODO: Implement actual registration logic
        let response = NodeRegistrationResponse {
            success: true,
            message: format!("Node {} registered successfully", req.node_id),
            assigned_id: req.node_id,
        };
        Ok(Response::new(response))
    }
    
    async fn health_check(
        &self,
        request: Request<HealthCheckRequest>,
    ) -> Result<Response<HealthCheckResponse>, Status> {
        let req = request.into_inner();
        // TODO: Implement actual health check
        let response = HealthCheckResponse {
            healthy: true,
            timestamp: std::time::SystemTime::now()
                .duration_since(std::time::UNIX_EPOCH)
                .unwrap()
                .as_secs(),
        };
        Ok(Response::new(response))
    }
    
    async fn stream_metrics(
        &self,
        request: Request<Streaming<MetricsUpdate>>,
    ) -> Result<Response<MetricsAck>, Status> {
        let mut stream = request.into_inner();
        while let Some(update) = stream.message().await? {
            // TODO: Process metrics update
            println!("Received metrics: {:?}", update);
        }
        Ok(Response::new(MetricsAck { received: true }))
    }
    
    async fn replicate_content(
        &self,
        request: Request<ReplicationRequest>,
    ) -> Result<Response<ReplicationStatus>, Status> {
        let req = request.into_inner();
        // TODO: Implement replication logic
        let response = ReplicationStatus {
            content_id: req.content_id,
            node_id: "".to_string(), // Will be set by node
            status: 2, // IN_PROGRESS
            message: "Replication started".to_string(),
        };
        Ok(Response::new(response))
    }
    
    async fn report_replication(
        &self,
        request: Request<ReplicationStatus>,
    ) -> Result<Response<ReplicationAck>, Status> {
        let req = request.into_inner();
        // TODO: Process replication report
        println!("Replication status: {:?}", req);
        Ok(Response::new(ReplicationAck { received: true }))
    }
}

pub fn server() -> NodeOrchestrationServer<OrchestrationService> {
    NodeOrchestrationServer::new(OrchestrationService)
}